Closed Bug 395494 Opened 17 years ago Closed 17 years ago

Warning: usage of uninitialized nsresult in nsNewsFolder.cpp(1054)

Categories

(MailNews Core :: Backend, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: bugzilla)

References

()

Details

Attachments

(1 file)

During the code cleanup in bug 379070 attachment 265319 [details] [diff] [review], most of the code in GetGroupUsername() was removed. At the moment nsresult rv is declared but never set (see URL). Patch to come.
Attached patch Return NS_OKSplinter Review
Just return NS_OK like in the other *Group* functions below GetGroupUsername().
Assignee: nobody → aqualon
Status: NEW → ASSIGNED
Attachment #280163 - Flags: review?(bienvenu)
Attachment #280163 - Flags: review?(bienvenu) → review+
Attachment #280163 - Flags: superreview?(mscott)
Comment on attachment 280163 [details] [diff] [review] Return NS_OK great catch!
Attachment #280163 - Flags: superreview?(mscott) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: