Bug 395494 Warning: usage of uninitialized nsresult in nsNewsFolder.cpp(1054). p=Bruno 'Aqualon' Escherl <aqualon@aquachan.de>,r=bienvenu,sr=mscott